# pacman

./: .syntastic_cpp_config  CMakeLists.txt  Dockerfile  Pacman.c  Pacman.cpp  Pacman.h  Pacman.hs  Pacman.pl  Pacman.pm  PacmanForeign.hs  README.md  compile_pacman.sh  pacman.rb  squares.pbm  t.pbm
.github/workflows/: ruby.yml
